スタッフの内情修正

--- a/pages/aboutstaff.html
+++ b/pages/aboutstaff.html
@@ -63,6 +63,7 @@
 <div class="anketocontainer">
 <div class="anketochild">
  <div class="grafcontainer">
+  <div class="grafchild">性別は？</div>
   <img src="../static/img/seibetu.png" class="grafchild">
    <div class="grafchild">
       <p>活動時は性別関係なく仲良く活動しています！</p>
@@ -455,6 +456,11 @@
   display: flex;
   flex-direction: column;
 
+}
+.grafcontainer img {
+  height: 350px;
+  width: 45%;
+  
 }
 .grafchild p{
   border:3px solid #77a9aa;
