--- a/pages/aboutstaff.html
+++ b/pages/aboutstaff.html
@@ -63,13 +63,14 @@
 <div class="anketocontainer">
 <div class="anketochild">
  <div class="grafcontainer">
-  <div class="grafchild">性別は？</div>
+  <div class="grafchild question"><strong>性別は？</strong></div>
   <img src="../static/img/seibetu.png" class="grafchild">
    <div class="grafchild">
       <p>活動時は性別関係なく仲良く活動しています！</p>
    </div>
   </div>
   <div class="grafcontainer">
+    <div class="grafchild question"><strong>学部はどこ？</strong></div>
       <img src="../static/img/gakubu.png" class="grafchild">
        <div class="grafchild">
           <p>理工キャンパスや所沢キャンパスの人もいます！
@@ -80,12 +81,14 @@
 </div>
 <div class="anketochild">
      <div class="grafcontainer">
+      <div class="grafchild question"><strong>GPAはどれくらい？</strong></div>
       <img src="../static/img/gpa.png" class="grafchild">
        <div class="grafchild">
           <p>高GPAの人も多いです！</p>
        </div>
       </div>
       <div class="grafcontainer">
+        <div class="grafchild question"><strong>受験方式は？</strong></div>
           <img src="../static/img/jyukenhoushiki.png" class="grafchild">
            <div class="grafchild">
               <p>いろいろな受験方式の人がいます！</p>
@@ -95,6 +98,7 @@
 
 <div class="anketochild">
       <div class="grafcontainer">
+        <div class="grafchild question"><strong>出身はどこ？</strong></div>
               <img src="../static/img/shusshin.png" class="grafchild">
                <div class="grafchild">
                   <p>やっぱり関東が多いですが地方出身の人もいます！</br>
@@ -103,6 +107,7 @@
                </div>
               </div>
       <div class="grafcontainer">
+        <div class="grafchild question"><strong>バイトしてる？</strong></div>
               <img src="../static/img/baito.png" class="grafchild">
                   <div class="grafchild">
                       <p>飲食系や教育系のバイトをしている人が多いです！</p>
@@ -112,12 +117,14 @@
 
 <div class="anketochild">
       <div class="grafcontainer">
+        <div class="grafchild question"><strong>バイトにどれくらい入ってる？</strong></div>
               <img src="../static/img/baitohindo.png" class="grafchild">
                   <div class="grafchild">
                       <p>たくさん稼いで運スタの友だちとたくさん遊びましょう！</p>
                   </div>
       </div>
       <div class="grafcontainer">
+        <div class="grafchild question"><strong>兼サーしてる？</strong></div>
           <img src="../static/img/kensa.png" class="grafchild">
               <div class="grafchild">
                   <p>兼サー先はスポーツ系、学術系が多い印象です！</p>
@@ -126,12 +133,14 @@
     </div>
     <div class="anketochild">
      <div class="grafcontainer">
+      <div class="grafchild question"><strong>兼サー先にどれくらい参加してる？</strong></div>
       <img src="../static/img/kensahindo.png" class="grafchild">
           <div class="grafchild">
               <p>兼サー先のことが好きでも、運スタのことは嫌いにならないでください！！</p>
           </div>
     </div>
     <div class="grafcontainer">
+      <div class="grafchild question"><strong>短期も含めて留学したことorする予定ある？</strong></div>
       <img src="../static/img/ryuugaku.png" class="grafchild">
           <div class="grafchild">
               <p>春休み、夏休みなどの長期休暇を利用して留学する運スタも多数います！</p>
@@ -141,6 +150,7 @@
 
   <div class="anketochild">
     <div class="grafcontainer">
+      <div class="grafchild question"><strong>ぶっちゃけ恋人いる？</strong></div>
       <img src="../static/img/koibito.png" class="grafchild">
           <div class="grafchild">
               <p>羨ましいです……</p>
@@ -156,12 +166,14 @@
 <div class="anketocontainer">
 <div class="anketochild">
  <div class="grafcontainer">
+  <div class="grafchild question"><strong>運スタの活動は忙しい？</strong></div>
   <img src="../static/img/isogashisa.png" class="grafchild">
    <div class="grafchild">
       <p>早稲田祭の成功のために日々頑張っています！</p>
    </div>
   </div>
   <div class="grafcontainer">
+    <div class="grafchild question"><strong>入会した理由は？</strong></div>
     <img src="../static/img/riyuu.png" class="grafchild">
      <div class="grafchild">
         <p>600人ものメンバーがいるため友だちがたくさんできるのもいいところです！</br>
@@ -177,22 +189,33 @@
     早稲田祭2023代表　佐溝眞行
   </div>
   <div class="sukima"></div>
+  <div class="sukima"></div>
+  <div class="sukima"></div>
   <div class="paragraph">Q1.なぜ運スタに入会したのか教えてください！</div>
   <div class="paragraph">A1.運スタや早稲田祭について知ったのは、寮の先輩から教わったことがきっかけです。高校でやった学園祭の実行委員が楽しかったので大学でもやりたいと思い、入会を決めました。
   </div>
-  
+  <div class="sukima"></div>
+  <div class="sukima"></div>
+  <div class="sukima"></div>
   <div class="paragraph">
     Q2.早稲田祭にかける熱い想いを教えてください。
   </div>
   <div class="paragraph">
     A2.早稲田祭は早大生を中心として早稲田文化に携わる全ての人の夢や情熱、本気が詰まった祭です。「早稲田祭2023は「夢」が咲き誇る祭であってほしい」「今と向き合い、夢を懸命に追い続ける人々の晴れ舞台となってほしい」と思っています。楽しいことも大変なことも、早稲田祭2023までの全部をひっくるめて、早稲田祭当日の景色を運営スタッフのみんなと見ることが本当に楽しみです！
   </div>
+  <div class="sukima"></div>
+  <div class="sukima"></div>
+  <div class="sukima"></div>
   <div class="paragraph">
     Q3.運営スタッフの楽しさを教えてください！
   </div>
   <div class="paragraph">
     A3.運スタは、年に1度しかない早稲田祭に向けて、600人の仲間と楽しいことも大変なことも共有しつつ、同じ1つの早稲田祭を目指し続けます。仲間と共に早稲田祭を目指す日々、そして大規模サークルならではのたくさんの人との出会いが運スタの醍醐味です！
   </div>
+  <div class="sukima"></div>
+  <div class="sukima"></div>
+  <div class="sukima"></div>
+
   <div class="paragraph">
     Q4これから入会を考えている人にメッセージをお願いします！
   </div>
@@ -209,29 +232,44 @@
       会場整備局局長　上原佳子
     </div>
     <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
     <div class="paragraph">Q1.なぜ運スタに入会したのか教えてください！</div>
     <div class="paragraph">
       A1.入会の動機として結構多いと思うんですが、イベントを運営するのが好きだからです！</br>中高でも生徒会をしていて、運営する側の楽しさを知ってしまっていたので、迷わず入会しました。</br>実際は中高の生徒会よりも大きな組織で大きな事をしていてびっくりした。
     </div>
     <div class="paragraph">
+      <div class="sukima"></div>
+      <div class="sukima"></div>
+      <div class="sukima"></div>
       Q2.運スタのやりがいを教えてください。
     </div>
     <div class="paragraph">
       A2.自分の活動が誰かにとっての早稲田祭の素敵な思い出をつくっているということが、</br>1年を通した活動の何よりのやりがいだと思います。</br>だからこそ責任が伴うし忙しさもあるけれど、それは全て早稲田祭当日に報われると思っています。</br>
 入会した時には想像もしなかったくらい早稲田のことも早稲田祭のことも運スタの仲間のことも大好きです。</br>その気持ちが3年目の今のやりがいになっています！
     </div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
     <div class="paragraph">
       Q3.今までの運スタの活動の中で1番楽しかったことを教えてください。
     </div>
     <div class="paragraph">
       A3.来場者の方から感謝の言葉をもらったことです！</br>コロナ禍によってさまざまな所でいろいろな制限をかけられ、「誰かと関わる機会」が大幅に失われました。</br>充分な対策の下行われた21・22の早稲田祭でも大小さまざまな障壁がありましたが、「大変な状況の中、素敵な早稲田祭をありがとう」という言葉をたくさん頂きました！ </br>誰かからの「ありがとう」が1番嬉しいです！
     </div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
     <div class="paragraph">
       Q4.入会する前に不安に思っていたことなどはありますか？
     </div>
     <div class="paragraph">
       A4.私は沖縄出身でお盆と正月は絶対帰る主義！なのですが、運スタに入会してもガッツリ帰省できるかがとても不安でした。</br>ただ実際は夏も冬もガッツリ帰省できました！！ </br>夏の忙しさは部署によっても違いますが、運スタには運スタ夏休みという期間が2週間ほどあります。</br>みんなその期間を利用して旅行したり帰省したりしています！</br>地方出身の人でガッツリ帰省したい派でも運スタはできます！
     </div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
+
     <div class="paragraph">
       Q5.これから入会を考えている人にメッセージをお願いします！
     </div>
@@ -246,11 +284,16 @@
       参加対応局局長　瀬藤亮太
     </div>
     <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
     <div class="paragraph">Q1.なぜ運スタに入会したのか教えてください！</div>
     <div class="paragraph">
       A1.大学に入る前からただ遊ぶだけではなく何かにみんなで取り組めるサークルに入りたいと考えていたので、</br>運スタを見つけた時はピッタリだと感じました。</br>高校生の時にクラスでやった文化祭がとても楽しかったので、大学ではより規模が大きいものに取り組めるのではないかという期待が大きかったです。</br>
 　また、早稲田大学という学生数がとても多い大学に入ったので、せっかくなら多くの人と友だちになりたいと考えました。</br>そのため、早稲田の中で最大規模のサークルであり他のサークルとの関わりも深く持てる運スタに大きな魅力を感じ、入会を決めました。
     </div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
     <div class="paragraph">
       Q2.運スタのやりがいを教えてください。
     </div>
@@ -260,12 +303,18 @@
       実際に私は、早稲田祭でステージを建て、そこで多くの人々に早稲田文化を知ってもらうことを目標に掲げて活動してきました。</br>祭までの長い準備期間の中で多くの人たちに助けられたり、参加団体・参加者の想いにも触れたりするなかで企画を無事に成功させた経験は、自分の中でとても良い思い出となりました。</br>何よりもずっと一緒に頑張ってくれた人たちの喜ぶ姿を見れたことで、自分の活動の意義を確信できたと感じています。</br>
       　「誰かと共に何かを目指すことで生まれるやりがい」は、私にとってさまざまな活動に取り組む原動力の1つです。</br>そしてそれは、運営スタッフだからこそ感じられるやりがいだと考えています。</br>運営スタッフには私が挙げた「やりがい」以外にもさまざまななやりがいを見つけられる環境があります。</br>これから入会するみなさんとも、これからの活動の原動力となるやりがいを一緒に見つけていけたら嬉しいです。      
     </div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
     <div class="paragraph">
       Q3.今までの運スタの活動の中で1番楽しかったことを教えてください。
     </div>
     <div class="paragraph">
       A3.たくさんの嬉しい思い出を運スタでつくることができました。</br>その中でもやはり当日に復活したステージの上でチーム員のみんなと集合写真を撮ったことはとても嬉しかったです！</br>
 　昨年度は今まで中止を余儀なくされていたステージをもう一度復活させる事を目指して活動してきました。</br>そのため、祭当日に本当にステージが復活したことやここまでチーム員が欠ける事なく当日を迎え集合写真を撮れたことに大きな喜びを感じました。
+<div class="sukima"></div>
+<div class="sukima"></div>
+<div class="sukima"></div>
     <div class="paragraph">
       Q4.入会する前に不安に思っていたことなどはありますか？
     </div>
@@ -275,6 +324,9 @@
       また、人数が多いサークルだからこそ多様性を大事にしているため、兼サーに限らず自由度は高いです。</br>
       このように運スタは人数が多いぶんさまざまな人がいるため兼サーしている人にとっても良い居場所となると考えています。</br>
     </div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
     <div class="paragraph">
       Q5.これから入会を考えている人にメッセージをお願いします！
     </div>
@@ -296,10 +348,15 @@
       渉外局地域チームチーフ　長江健眞
     </div>
     <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
     <div class="paragraph">Q1.なぜ運スタに入会したのか教えてください！</div>
     <div class="paragraph">
       A1.入学が決まった時に、「せっかく日本でも有数の大学に入ったのだから、サークルを通して早稲田での大学生活を噛み締めたいな」と思ったのがきっかけです！</br>大学生の時しかできないこと、早稲田大学そのものにコミットできるサークルを探していた時に出会ったのが「早稲田祭運営スタッフ」でした。</br>1年をかけて大学行事である学園祭を自分の手でつくりあげることのできる運スタは、まさに自分が探していたサークルでした。</br>その存在を見つけた瞬間に「運スタに入りたい！」と思いました。
     </div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
     <div class="paragraph">
       Q2.運スタのやりがいを教えてください。
     </div>
@@ -307,18 +364,27 @@
       A2.やはり、「祭の全てを学生の手でつくりあげることができる」ことにやりがいを感じています！</br>運営スタッフは、企画やステージの運営はもちろん、当日の警備や動線、広報や協賛の獲得まで、その全てを自分たちで行っています。</br>
       　私が所属する渉外局地域チームは、大学周辺に暮らす地域の方々から祭へのご理解・ご協力を得るために日々活動し、</br>早稲田祭の開催に貢献する役割を担っています。日々の活動は小さなものですが、30近いチームがそれぞれの役割を全うし、1つの祭をつくりあげています。</br>そんな運スタでの日々は何ものにも代え難いと感じます！</br>これが私の思う運スタの「やりがい」です！！      
     </div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
     <div class="paragraph">
       Q3.今までの運スタの活動の中で1番楽しかったことを教えてください。
     </div>
     <div class="paragraph">
       A3.今までで1番うれしかったのは、地域の方が「いつもありがとう」と私たちに言ってくださったことです。</br>これは、地域チームの活動の1つである「地域おそうじ」の実施後にいただいた言葉でした。</br>多くの局やチームは早稲田祭本番の成功が重要であるのに対し、自分の所属している渉外局は日々の活動の積み重ねも当日と同じぐらい大切にしています。</br>大学外部の方々と信頼関係を構築するための地道な活動はあまり目立たないという状況の中で、</br>日々の活動は報われるのだと実感できた瞬間であり、活動の原動力が生まれた瞬間でもありました。</br>この一言がとても嬉しかったです！
     </div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
     <div class="paragraph">
       Q4.入会する前に不安に思っていたことなどはありますか？
     </div>
     <div class="paragraph">
       A4.学園祭の運営をしたことがない人でも活動できるのか不安に感じていました。</br>もちろん「学園祭の運営なんてしたことがない！」という人でも運スタはできます！</br> 実際経験のなかった私でも、1年間運スタに没頭して活動を続けることができ、今はチーフという役職についています。</br>経験がなくともしっかり活躍できる環境が運スタにはあります！ </br>それは、たくさんの新規を受け入れる基盤や頼れる同期と先輩の存在があるからです。</br>運スタの規模感や本格的な活動に臆することはありません！</br>その先に新しい自分が待っています！
     </div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
     <div class="paragraph">
       Q5.これから入会を考えている人にメッセージをお願いします！
     </div>
@@ -334,16 +400,24 @@
       企画局OFEFチームチーフ　三上詩織
     </div>
     <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
     <div class="paragraph">Q1.なぜ運スタに入会したのか教えてください！</div>
     <div class="paragraph">
       A1.運スタにいる人って、元生徒会長とか、それこそ文化祭実行委員でした、みたいな人が一定数いるんです。</br>なので、その時やってたことをまたやりたい！ っていう動機が多いと思うんですね。</br>でも私はそうではなくて。</br>何がきっかけで運スタを知ったのかはもう忘れちゃったんですけど、なんとなく「悪い人があんまりいなそう、素敵な友だちに出会えそう」っていう直感だけで選びました(笑)</br>あとは、早稲田祭を創るという同じ目標を持って頑張る仲間ができるというのもすごく素敵だろうなと思ったのもあります。</br>入会してみてその勘は当たっていたと断言できます！
     </div>
-    <div class="paragraph">
+    <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="paragraph"> 
       Q2.運スタのやりがいを教えてください。
     </div>
     <div class="paragraph">
       A2.私の所属している企画局OFEFチームは、Opening FestivalとEnding Festivalという、祭の開幕と閉幕を象徴する企画を担っています。</br>他の企画局のチームもそうなのですが、たった1回、ほんの少しの時間のために何ヶ月もの間準備することになるんですね。</br>私はそこに良さを感じていて、短い時間とはいえ目に見える形でゴールがあるというのはとても楽しいです！</br>またOpening FestivalとEnding Festivalは、多い時だと3500人ぐらいの観客の方が見る、とても注目度の高い企画です。</br>その分責任もすごく感じますが、やりがいや達成感はすごく大きいです！
     </div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
     <div class="paragraph">
       Q3.今までの運スタの活動の中で1番楽しかったことを教えてください。
     </div>
@@ -351,12 +425,19 @@
       A3.やはり、祭当日に企画が形になった瞬間や、出演団体・出演者の方のキラキラとした表情を見た時ですね。</br>準備を進めていく中で、自分たちがやっていることが正解なのか、このまま良い企画をつくることができるのかと不安になることも多くありました。</br>ですが本番のステージを見て、自分たちがやってきたことは間違いではなかったと感じることができて嬉しかったです。</br>観客の方が涙を流しているのを見かけたときも嬉しかったですね！</br>
 　本番中は連絡用のトランシーバーをつけていたり団体対応をしていたりで、</br>正直しっかりと企画を見ることはできなかったんですけど、他部署の同期に「ここの演出感動した！」という連絡をもらえて疲れが吹き飛んだのも覚えています(笑)
     </div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
+
     <div class="paragraph">
       Q4.入会する前に不安に思っていたことなどはありますか？
     </div>
     <div class="paragraph">
       A4.初めは人数の多いサークルなので、馴染めるのか心配でした。私は文系だし兼サーもしていないので……</br>馴染めなかったらどうしようと思っていました。</br>ですが私のチームのみんなはすごく多様で、所沢キャンパスに通ってる同期もいるし、色々あって今年24歳になった同期もいます！</br>そんな個性的な人たちがたくさんいる中で全員がチームに馴染んでいます。</br>運スタ全体を見ても、どんな人でも分かり合おうとする心さえあれば居場所ができるなっていうのは感じています！</br>あと伝えたいのは、朝起きるのが苦手でも大丈夫(笑) 運スタは基本早起きが苦手な人が多いので、ミーティングも夜になることが多いです！！
     </div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
+    <div class="sukima"></div>
     <div class="paragraph">
       Q5.これから入会を考えている人にメッセージをお願いします！
     </div>
@@ -486,7 +567,12 @@
   flex-direction: column;
   justify-content: center;
 }
+.question {
+  text-align: left;
+  font: bold;
+  color:#08263a;
 
+}
 .interviewcontainer{
   display: flex;
   flex-direction: row;
