--- a/pages/components.html
+++ b/pages/components.html
@@ -112,10 +112,9 @@
 </div>
 
 <div class="section-title1">
-  <img class="section1-img" src="../static/img/section1-copy.png"/>
-  
-  参加対応局局長
-
+  <img class="section1-img" src="../static/img/section1.png"
+  />
+  <div class="section1-text">参加対応局</div>
   </div>
 
 
