--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -78,11 +78,6 @@
       </div>
 
       <div class="flex-child2">
-        <div class="daihyo">
-          <div class="blocktitle-green">
-            佐溝 眞行
-          </div>
-        </div>
          <div class="paragraph">
           はじめまして。</br>
           早稲田祭2023運営スタッフ 代表の佐溝眞行と申します。</br>
@@ -100,7 +95,7 @@
           あなたの夢が、いつか誰かの夢に。誰かの夢が、いつかあなたの夢に。</br>
           そしてあなたの夢が、まだ誰も見たことのない祭を創る。</br>
           楽しいことも大変なことも全部ひっくるめて、早稲田祭を創り上げる日々をみなさんと共に過ごすのをとても楽しみにしています！</br>
-          早稲田祭2023運営スタッフ 代表
+          早稲田祭2023運営スタッフ 代表 佐溝眞行
       </div>
       </div>
     </div>
@@ -481,6 +476,8 @@
 .paragraph{
   letter-spacing:0.1em;
   line-height:20px;
+  margin-top:35px;
+  margin-bottom: 35px;
 }
 @media print, screen and (max-width:1200px){
   .flexparent1{
