--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@ top: 0;
 left: 100%; 
 width: 100%;
 height: 100%;
+object-fit: cover;
 animation: slide 15s linear forwards infinite; 
 }
 .slide-show > img:nth-of-type(1){
