--- a/pages/howto.html
+++ b/pages/howto.html
@@ -102,7 +102,7 @@
     入会受付期間中に、入会申し込みフォームを提出してください。</br>
 定員を上回った場合、提出いただいたフォームをもとに、運営スタッフによる選考を行います。</br>
 結果は、入会の可否にかかわらずメールにて全員にご連絡いたします。</br>
-<!--入会に関する詳細な情報は、<a href="">こちら</a>の募集要項からご確認ください。-->
+入会に関する詳細な情報は、<a href="https://drive.google.com/file/d/1325En4qWRGdlFXURCdvu9mpC386UH9xV/view" target="_blank" rel="noreferrer noopener" name="youkou">こちら</a>の募集要項からご確認ください。
   </div>
 </div>
   <style>
