--- a/pages/overall.html
+++ b/pages/overall.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="2023早稲田祭運営スタッフ新歓サイト-運営スタッフ全体像" />
     <meta property="og:description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。" />
     <meta property="og:site_name" content="2023早稲田祭運営スタッフ新歓サイト" />
-    <meta property="og:image" content="サムネイル画像のURL" />
+    <meta property="og:image" content="https://wasedasai.github.io/2023-Shinkan/static/img/logo_catch.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@staff_wasedasai" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
