--- a/pages/howto.html
+++ b/pages/howto.html
@@ -9,12 +9,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。"> 
     <meta name="keywords" content="早稲田祭,早稲田祭運営スタッフ,運スタ,早稲田">
-    <meta property="og:url" content="https://wasedasai.github.io/2023-Shinkan/pages/about.html" />
+    <meta property="og:url" content="https://wasedasai.github.io/2023-Shinkan/pages/3about.html" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="2023早稲田祭運営スタッフ新歓サイト-入会方法" />
     <meta property="og:description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。" />
     <meta property="og:site_name" content="2023早稲田祭運営スタッフ新歓サイト" />
-    <meta property="og:image" content="サムネイル画像のURL" />
+    <meta property="og:image" content="https://wasedasai.github.io/2023-Shinkan/static/img/logo_catch.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@staff_wasedasai" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
