--- a/pages/photogallery.html
+++ b/pages/photogallery.html
@@ -62,8 +62,8 @@
 
 <div class="flex-parents">
 <div class="flex-child1-1">
-<a href="../static/img/1-1.png" data-lightbox="pohoto01">
-<img src="../static/img/1-1.png">
+<a href="../static/img/1-1.jpg" data-lightbox="pohoto01">
+<img src="../static/img/1-1.jpg">
 </a>
 </div> 
 <div class="flex-child1-2">
