--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="ja">
 <head>
     <meta charset="utf-8">
     <title>2023早稲田祭運営スタッフ新歓サイト</title>
@@ -56,7 +58,7 @@
     <img src="../static/img/heroblue.png"class="herophoto">
     <p>お問い合わせについて</p>
 </div>
-<div class="spacer" style="height:15%;">
+<div class="spacer" style="height:200px;">
 </div>
 <div class="paragraph">
   早稲田祭2023や運営スタッフに関して、何かご質問がございましたらshinkan@wasedasai.netまでお気軽にお問い合わせください。
@@ -70,7 +72,7 @@
     white-space: nowrap;
   }
 </style>
-<div class="spacer" style="height:15%;">
+<div class="spacer" style="height:200px;">
 </div>
 
  <footer class="footer">
@@ -150,3 +152,4 @@
     </div>
 </footer>
 </body>
+</html>
