--- a/pages/question.html
+++ b/pages/question.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="ja">
 <head>
     <meta charset="utf-8">
     <title>2023早稲田祭運営スタッフ新歓サイト</title>
@@ -358,3 +360,4 @@ body{
 <script src="../static/js/question.js"></script>
 
 </body>
+</html>
