--- a/pages/aboutstaff.html
+++ b/pages/aboutstaff.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="ja">
 <head>
     <meta charset="utf-8">
     <title>2023早稲田祭運営スタッフ新歓サイト</title>
@@ -584,5 +586,5 @@
 }
 </style>
 </body>
-
+</html>
 
