--- a/pages/components.html
+++ b/pages/components.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="ja">
 <head>
     <meta charset="utf-8">
     <title>2023早稲田祭運営スタッフ新歓サイト</title>
@@ -202,3 +204,4 @@
     </div>
 </footer>
 </body>
+</html>
