--- a/pages/event.html
+++ b/pages/event.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="ja">
 <head>
     <meta charset="utf-8">
     <title>2023早稲田祭運営スタッフ新歓サイト</title>
@@ -717,3 +719,4 @@
 
   </style>
 </body>
+</html>
