--- a/pages/howto.html
+++ b/pages/howto.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="ja">
 <head>
     <meta charset="utf-8">
     <title>2023早稲田祭運営スタッフ新歓サイト</title>
@@ -230,3 +232,4 @@
   </div>
 </footer>
 </body>
+</html>
