--- a/pages/introduce.html
+++ b/pages/introduce.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="ja">
 <head>
     <meta charset="utf-8">
     <title>2023早稲田祭運営スタッフ新歓サイト</title>
@@ -463,6 +465,7 @@
   }
   </style>
 </body>
+</html>
 
 <!--
 <head>
