--- a/pages/overall.html
+++ b/pages/overall.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="ja">
 <head>
     <meta charset="utf-8">
     <title>2023早稲田祭運営スタッフ新歓サイト</title>
@@ -144,3 +146,4 @@
   }
 </style>
 </body>
+</html>
