--- a/pages/photogallery.html
+++ b/pages/photogallery.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="ja">
 <head>
   <meta charset="utf-8">
   <title>2023早稲田祭運営スタッフ新歓サイト</title>
@@ -781,3 +783,4 @@ body{
 
 </style>
 </body>
+</html>
