--- a/pages/photogallery.html
+++ b/pages/photogallery.html
@@ -209,15 +209,20 @@
         </a>
     </div>
     </div> 
-    
-    <div class="flex-child3-2">
-      <div class="img3-2">
-        <a href="../static/img/6-2.jpg" data-lightbox="pohoto01">
-    <img src="../static/img/6-2.jpg">
+
+    <div class="flex-child3-3">
+      <div class="img3-3-1">
+        <a href="../static/img/6-2-1.jpg" data-lightbox="pohoto01">
+     <img src="../static/img/6-2-1.jpg">
         </a>
       </div>
+      <div class="img3-3-2">
+        <a href="../static/img/6-2-2.jpg" data-lightbox="pohoto01">
+     <img src="../static/img/6-2-2.jpg">
+        </a>
     </div>
-  
+    </div> 
+
     <div class="flex-child3-3">
       <div class="img3-3-1">
         <a href="../static/img/6-3-1.jpg" data-lightbox="pohoto01">
@@ -568,7 +573,7 @@
 .flex-parents{
   display: flex;
   width:75%;
-  height:450px;
+  height:350px;
   margin: 0 auto;
   overflow: hidden;
   margin-bottom:5px;
@@ -579,7 +584,7 @@
 .flex-parents{
   display: flex;
   width:90%;
-  height:180px;
+  height:120px;
   margin: 0 auto;
   overflow: hidden;
   margin-bottom:5px;
