--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -363,7 +363,7 @@
   width:100%;
   margin: 0 auto;
   position: absolute;
-  top:-35;
+  top:-3%;
   left:0;
 }
 
@@ -409,7 +409,7 @@
   width:100%;
   margin: 0 auto;
   position: absolute;
-  top:-35;
+  top:-8%;
   left:0;
 }
 
@@ -517,7 +517,7 @@
 
   .box2-img{
     right:0;
-    bottom: 1%;
+    bottom: 2%;
     width:50%;
     z-index: 99;
   }
