--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <meta name="google-site-verification" content="AN9Z6c0SLwnd6aV6AHVgEswJSbA8MOT_jS5lFlX-hjw" />
       <meta name="viewport" content="width=device-width,initial-scale=1.0">
       <meta name="description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。"> 
-      <meta name="keywords" content="早稲田祭,早稲田祭運営スタッフ,運スタ,早稲田">
+      <meta name="keywords" content="早稲田祭,早稲田祭運営スタッフ,運スタ,早稲田,運スタ新歓,運スタ2023,早稲田祭2023運営スタッフ,運スタ2023新歓">
       <meta property="og:url" content="https://wasedasai.github.io/2023-Shinkan/pages/about.html" />
       <meta property="og:type" content="article" />
       <meta property="og:title" content="2023早稲田祭運営スタッフ新歓サイト" />
