--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
       <link rel="stylesheet" media="(max-width: 1200px)" href="static/css/index_mobile.css">
       <meta name="google-site-verification" content="AN9Z6c0SLwnd6aV6AHVgEswJSbA8MOT_jS5lFlX-hjw" />
       <meta name="viewport" content="width=device-width,initial-scale=1.0">
-      <meta name="description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。"> 
+      <meta name="description" content="早稲田祭運営スタッフ(運スタ)2023年度新歓用公式サイトです。運スタの新歓イベントや、運スタに関する情報を掲載しています。"> 
       <meta name="keywords" content="早稲田祭,早稲田祭運営スタッフ,運スタ,早稲田,運スタ新歓,運スタ2023,早稲田祭2023運営スタッフ,運スタ2023新歓">
       <meta property="og:url" content="https://wasedasai.github.io/2023-Shinkan/pages/about.html" />
       <meta property="og:type" content="article" />
       <meta property="og:title" content="2023早稲田祭運営スタッフ新歓サイト" />
-      <meta property="og:description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。" />
+      <meta property="og:description" content="早稲田祭運営スタッフ(運スタ)2023年度新歓用公式サイトです。運スタの新歓イベントや、運スタに関する情報を掲載しています。" />
       <meta property="og:site_name" content="2023早稲田祭運営スタッフ新歓サイト" />
       <meta property="og:image" content="https://wasedasai.github.io/2023-Shinkan/static/img/logo_catch.png"/>
       <meta name="twitter:card" content="summary_large_image" />
