--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
   <div class="paragraph">対面説明会 参加希望フォームは<a href="https://docs.google.com/forms/d/e/1FAIpQLSclxm2qaAjPRRUA55MydFYBVwnnfTI-fxwsibBX_OGSdzU8xg/viewform" target="_blank" rel="noreferrer noopener">こちら</a>から！</div>
   <div class="paragraph"><a href="pages/event.html#tour">交流企画参加希望フォーム 一次募集受付開始！</a></div>
   <div class="paragraph"><a href="pages/event.html#tour">交流企画参加希望フォーム 一次募集締切まであと2日！</a></div>
-  <!--news5 4/1 リリース
-  <div class="paragraph"><a href="pages/howto.html">未定</a></div>-->
-  <!--news11 4/1 リリース
-  <div class="paragraph">未定</div>-->
+  <div class="paragraph"><a href="pages/howto.html">早稲田祭2023運営スタッフ 募集要項</a>公開！</div>
+  <div class="paragraph">交流企画参加希望フォーム 一次募集の受付は終了しました。</div>
+  <div class="paragraph"><a href="pages/howto.html">早稲田祭2023運営スタッフ 募集要項公開！</a></div>
   <!--news12 4/1 リリース
   <div class="paragraph"><a href="pages/event.html">未定</a></div>-->
   <!--news15 4/3 リリース
