--- a/index.html
+++ b/index.html
@@ -70,10 +70,8 @@
   <div class="paragraph">交流企画参加希望フォーム 一次募集の受付は終了しました。</div>
   <div class="paragraph"><a href="pages/event.html#tour">交流企画参加希望フォーム 二次募集受付開始！</a></div>
   <div class="paragraph"><a href="pages/event.html#tour">交流企画参加希望フォーム 二次募集締切まであと2日！</a></div>
-  <!--news7 4/6 リリース
-  <div class="paragraph">説明会動画の第1弾を新歓公式<a href="pages/event.html">YouTube</a>にて公開しました</div>-->
-  <!--news13 4/6 リリース
-  <div class="paragraph">説明会動画の第1弾を新歓公式<a href="pages/event.html">YouTube</a>にて公開しました</div>-->
+  <div class="paragraph">説明会動画の第1弾を新歓公式<a href="pages/event.html">YouTube</a>にて公開しました</div>
+  <div class="paragraph">交流企画参加希望フォーム 二次募集の受付は終了しました。</div>
   <!--news8 4/8 リリース
   <div class="paragraph">説明会動画の第2弾を新歓公式<a href="pages/event.html">YouTube</a>にて公開しました</div>-->
   </div>
