--- a/pages/event.html
+++ b/pages/event.html
@@ -299,7 +299,7 @@
       </div>
       <div class="info1">場所</div>
       <div class="info">@早稲田大学構内外</div>
-      <div class="info1">お申し込みは<a href="https://forms.gle/zZFXG3p18ZV1kF9p6">こちら</a></div>
+      <div class="info1">お申し込みは<a href="https://forms.gle/ivBdJLe8nmGQNYWcA">こちら</a></div>
       
       <img src="../static/img/tour.jpg" class="picture">
     </div>
@@ -328,7 +328,7 @@
       </div> 
       <div class="info1">場所</div>
       <div class="info">@学生会館</div>
-      <div class="info1">お申し込みは<a href="https://forms.gle/529Yiq82dUi1zhk36">こちら</a></div>
+      <div class="info1">お申し込みは<a href="https://forms.gle/BVxaqgVq2g2LA8b26">こちら</a></div>
       <img src="../static/img/sinndan.jpg" class="picture">
     </div>
 
@@ -354,7 +354,7 @@
       </div>
       <div class="info1">場所</div>
       <div class="info">@学生会館</div>
-      <div class="info1">お申し込みは<a href="https://forms.gle/5A7k724W2igGSSVc9">こちら</a></div>
+      <div class="info1">お申し込みは<a href="https://forms.gle/rrcxrrNYZSRSm4oJA">こちら</a></div>
       <img src="../static/img/mikke.jpg" class="picture">
     </div>
   </div>
@@ -379,7 +379,7 @@
       </div> 
       <div class="info1">場所</div>
       <div class="info">@Zoom</div>
-      <div class="info1">お申し込みは<a href="https://forms.gle/fHnQ5ou3B4mLg8SZ6">こちら</a></div>
+      <div class="info1">お申し込みは<a href="https://forms.gle/geERJJV7XtKVZ1v99">こちら</a></div>
       <img src="../static/img/zemi.jpg" class="picture">
     </div>
 
@@ -404,7 +404,7 @@
       </div>
       <div class="info1">場所</div>
       <div class="info">@Zoom</div>
-      <div class="info1">お申し込みはこちら</div>
+      <div class="info1">お申し込みは<a href="https://forms.gle/m9hyn18zKxtfsL8E7">こちら</a></div>
       <img src="../static/img/counsil.jpg" class="picture">
     </div>
   </div>
