--- a/pages/event.html
+++ b/pages/event.html
@@ -542,7 +542,12 @@
     font-weight: 700;
 
   }
-
+  .info1 a{
+    color:#77a9aa;
+  }
+  .info1 a:hover{
+    color:#f7c4c6;
+  }
   .block{
     margin-bottom: 30px;
   }
