--- a/pages/event.html
+++ b/pages/event.html
@@ -516,6 +516,7 @@
   .flex-children{
     width:40%;
     background-color: #fff;
+    color: #08263a;
     text-align: center;
     border-radius:30px;
     padding: 10px;
