--- a/index.html
+++ b/index.html
@@ -70,16 +70,11 @@
   <div class="paragraph">交流企画参加希望フォーム 一次募集の受付は終了しました。</div>
   <div class="paragraph"><a href="pages/event.html#tour">交流企画参加希望フォーム 二次募集受付開始！</a></div>
   <div class="paragraph"><a href="pages/event.html#tour">交流企画参加希望フォーム 二次募集締切まであと2日！</a></div>
-  <!--news
   <div class="paragraph">説明会動画の第1弾を新歓公式<a href="https://www.youtube.com/watch?v=-FA-zlWlhDQ">YouTube</a>にて公開しました</div>
   <div class="paragraph">交流企画参加希望フォーム 二次募集の受付は終了しました。</div>
-  -->
-  <!--news16 4/6 リリース
-  <div class="paragraph">未定</div>-->
-  <!--news17 4/6 リリース
-  <div class="paragraph">未定</div>-->
-  <!--news18 4/6 リリース
-  <div class="paragraph">未定</div>-->
+  <div class="paragraph">交流企画「運スタミッケ」追加募集決定！ 参加希望フォームは<a href="https://forms.gle/rrcxrrNYZSRSm4oJA">こちら</a>から</div>
+  <div class="paragraph">交流企画「運スタゼミナール」追加募集決定！ 参加希望フォームは<a href="https://forms.gle/geERJJV7XtKVZ1v99">こちら</a>から</div>
+  <div class="paragraph">交流企画「運スタカウンセリング」追加募集決定！ 参加希望フォームは<a href="https://forms.gle/m9hyn18zKxtfsL8E7">こちら</a>から</div>
   <!--news8 4/8 リリース
   <div class="paragraph">説明会動画の第2弾を新歓公式<a href="pages/event.html">YouTube</a>にて公開しました</div>-->
   </div>
