--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
  <html lang="ja">
  <head>
       <meta charset="utf-8">
-      <title>2023早稲田祭運営スタッフ新歓サイト</title>
+      <title>2023早稲田祭運営スタッフ新歓</title>
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;700&display=swap" rel="stylesheet">
       <link rel="stylesheet" media="(min-width: 1200px)" href="static/css/index_pc.css">
       <link rel="stylesheet" media="(max-width: 1200px)" href="static/css/index_mobile.css">
+      <link rel="canonical" href="https://wasedasai.github.io/2023-Shinkan/index.html">
       <meta name="google-site-verification" content="AN9Z6c0SLwnd6aV6AHVgEswJSbA8MOT_jS5lFlX-hjw" />
       <meta name="viewport" content="width=device-width,initial-scale=1.0">
       <meta name="description" content="早稲田祭運営スタッフ(運スタ)2023年度新歓用公式サイトです。運スタの新歓イベントや、運スタに関する情報を掲載しています。"> 
