--- a/pages/photogallery.html
+++ b/pages/photogallery.html
@@ -2,13 +2,14 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>2023早稲田祭運営スタッフ新歓サイト</title>
+  <title>2023早稲田祭運営スタッフ新歓</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" media="(min-width: 1200px)" href="../static/css/index_pc.css">
   <link rel="stylesheet" media="(max-width: 1200px)" href="../static/css/index_mobile.css">
   <link rel="stylesheet"  href="../static/dist/css/lightbox.css">
+  <link rel="canonical" href="https://wasedasai.github.io/2023-Shinkan/index.html">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。"> 
   <meta name="keywords" content="早稲田祭,早稲田祭運営スタッフ,運スタ,早稲田">
