--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
   <div class="news">
   <p>NEWS</p>
   <div class="newscontainer">
+    <div class="paragraph">説明会動画の第3弾を新歓公式<a href="https://youtu.be/ZEnaC1G0lbg">YouTube</a>にて公開しました</div>
   <div class="paragraph">説明会動画の第2弾を新歓公式<a href="https://youtu.be/d55qN6yoqSk">YouTube</a>にて公開しました</div>
   <div class="paragraph">交流企画「運スタミッケ」追加募集決定！ 参加希望フォームは<a href="https://forms.gle/rrcxrrNYZSRSm4oJA">こちら</a>から</div>
   <div class="paragraph">交流企画「運スタゼミナール」追加募集決定！ 参加希望フォームは<a href="https://forms.gle/geERJJV7XtKVZ1v99">こちら</a>から</div>
