4/15公開newsとそれに合わせた追加

--- a/pages/event.html
+++ b/pages/event.html
@@ -414,7 +414,11 @@
     </div>
   </div>
 
-  
+  <div class="furipe"  id="frp">
+   <div class="paragraph pdf"><a href="https://drive.google.com/file/d/1RGqygDpA4ft2xnZwRd3jwHJ_BxxTu2DN/view?usp=share_link">新歓フリーペーパー</a></div>
+   <a href="https://drive.google.com/file/d/1RGqygDpA4ft2xnZwRd3jwHJ_BxxTu2DN/view?usp=share_link" target="_blank" rel="noopener noreferrer"><img src="../static/img/hyoushi.png"></a>
+  </div>
+</br>
 
  <footer class="footer">
     <div class="footer-inner">
@@ -696,7 +700,38 @@
 .talk-text{
   letter-spacing:-0.4px;
 }
-
+.furipe{
+  text-align: center;
+  margin: 0 auto;
+  background-color: #FFF;
+  border-radius: 30px;
+  width: 83%;
+  padding-bottom: 20px;
+}
+.pdf{
+  text-align: center;
+  font-weight: bold;
+  font-size: 2vw;
+}
+.pdf a{
+    color:#77a9aa;
+  }
+  .pdf a:hover{
+    color:#f7c4c6;
+  }
+  .furipe img{
+    width:60%;
+    height: 50%;
+    border-radius: 30px;
+    display: inline-block;
+  }
+  @media print, screen and (min-width: 1200px){
+  .pdf{
+    padding-top: 50px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  }
+  }
   @media print, screen and (max-width: 1200px){
 
   .calender{
@@ -725,6 +760,13 @@
   
   .scrollwindow{
     height: 10%;
+  }
+
+  .pdf{
+    font-size: 3vw;
+    margin-bottom: 0px;
+    padding-top: 20px;
+  padding-bottom: 20px;
   }
   }
 
