--- a/pages/introduce.html
+++ b/pages/introduce.html
@@ -144,7 +144,7 @@
     </div>
   <div class="flex-child2">
     <div class="blocktitle-green midashi">
-      局長 局長 丸山公太郎（まるやま こうたろう）
+      局長 丸山公太郎（まるやま こうたろう）
     </div>
       <div class="paragraph">
         <strong>「創るなら開発局、変えるなら開発局」</strong>
