--- a/pages/aboutstaff.html
+++ b/pages/aboutstaff.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <title>2023早稲田祭運営スタッフ新歓ト</title>
+    <title>2023早稲田祭運営スタッフ新歓</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;700&display=swap" rel="stylesheet">
