--- a/pages/howto.html
+++ b/pages/howto.html
@@ -96,7 +96,7 @@
     入会受付期間中に、<a href="https://docs.google.com/forms/d/e/1FAIpQLSeT-1exHPz3LPO-2rHhPL9ZU8ugGklLp2Z5zu_MHmIvLHF8mw/closedform">入会申し込みフォーム</a>を提出してください。</br>
 定員を上回った場合、提出いただいたフォームをもとに、運営スタッフによる選考を行います。</br>
 結果は、入会の可否にかかわらずメールにて全員にご連絡いたします。</br>
-入会に関する詳細な情報は、<a href="https://drive.google.com/file/d/1lKYhfMsohvc4oq2GlGdr7IX0CkE2aY1P/view?usp=sharing">こちら</a>の募集要項からご確認ください。
+入会に関する詳細な情報は、<a href="https://drive.google.com/file/d/1lKYhfMsohvc4oq2GlGdr7IX0CkE2aY1P/view?usp=share_link">こちら</a>の募集要項からご確認ください。
   </div>
 </div>
   <style>
